--- a/src/HTML/main_page.html
+++ b/src/HTML/main_page.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
+  <script src="../CSS/bootstrap/bootstrap.css" rel="stylesheet"></script>
+  <script src="../CSS/bootstrap/bootstrap.css.map" rel="stylesheet"></script>
   <title>Faith Independent Baptist Church</title>
   <link rel="stylesheet" href="../CSS/style.css">
 </head>
@@ -27,17 +29,17 @@
       <div class="service-info">
         <h2>Faith Independent Baptist Church</h2>
         <div class="church-logo">
-          <img src="logo.png" alt="" />
+          <img src="../images/Church+Snow+picture+resized-1920w.png" alt="chruchImage" />
         </div>
       </div>
 
-      <div class="buttons-section">
-        <a href="aboutUs.html"><button>About Us</button></a>
-        <button>Give Online</button>
-        <button>Request Prayer</button>
-        <button>Join Us Online</button>
-        <button>The Truth About Eternity</button>
-      </div>
+      <table colspan="2" class="buttons-section">
+        <td><a href="aboutUs.html"><button>About Us</button></a></td>
+        <td><button>Give Online</button></td>
+        <td><button>Request Prayer</button></td>
+        <td><button>Join Us Online</button></td>
+        <td><button>The Truth About Eternity</button></td>
+      </table>
     </section>
   </main>
 </body>
