[Change][RVT-Design Main Page] Added the logo and a wooden png background. Will change later.

--- a/src/HTML/main_page.html
+++ b/src/HTML/main_page.html
@@ -11,34 +11,32 @@
   <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
-  <header>
+  <nav>
     <div class="header-content">
-      <div class="contact-info">
-        <p>(770) 957-9889</p>
-        <p>1099 Hwy 81 West McDonough, GA 30253</p>
+      <div class="logo">
+        <img src="../images/fibc-logo-white-rust-383w.webp" alt="">
       </div>
       <div class="buttons">
-        <button>Service Times</button>
-        <button>Contact Us</button>
+        <a href="#">Home</a>
+        <a href="aboutUs.html">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Give</a>
+        <a href="#">Ministries</a>
       </div>
     </div>
-  </header>
+  </nav>
 
   <main>
     <section class="main-section">
       <div class="service-info">
         <h2>Faith Independent Baptist Church</h2>
-        <div class="church-logo">
+        <!-- <div class="church-logo">
           <img src="../images/Church+Snow+picture+resized-1920w.png" alt="chruchImage" />
-        </div>
+        </div> -->
       </div>
 
       <table colspan="2" class="buttons-section">
-        <td><a href="aboutUs.html"><button>About Us</button></a></td>
-        <td><button>Give Online</button></td>
-        <td><button>Request Prayer</button></td>
-        <td><button>Join Us Online</button></td>
-        <td><button>The Truth About Eternity</button></td>
+
       </table>
     </section>
   </main>
